Basic app finished

--- a/package.json
+++ b/package.json
@@ -19,12 +19,22 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/camera": "^6.3.0",
+    "@awesome-cordova-plugins/dialogs": "^6.3.0",
+    "@awesome-cordova-plugins/native-storage": "^6.3.0",
+    "@awesome-cordova-plugins/network": "^6.3.0",
+    "@capacitor/android": "4.6.2",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.2",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/lab": "^3.2.15",
+    "cordova-plugin-camera": "^6.0.0",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-network-information": "^3.0.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
